Refactor: Code Cleanup