@@ -6,9 +6,9 @@
  * to you under the Apache License, Version 2.0 (the
  * "License"); you may not use this file except in compliance
  * with the License. You may obtain a copy of the License at
- *
+ * <p>
  * http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p>
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -26,22 +26,8 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import jakarta.ws.rs.Consumes;
-import jakarta.ws.rs.GET;
-import jakarta.ws.rs.POST;
-import jakarta.ws.rs.PUT;
-import jakarta.ws.rs.Path;
-import jakarta.ws.rs.PathParam;
-import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.MediaType;
-import java.time.LocalDateTime;
-import java.time.OffsetDateTime;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.apache.fineract.infrastructure.core.exception.PlatformDataIntegrityException;
 import org.apache.fineract.infrastructure.security.service.PlatformSecurityContext;
@@ -49,7 +35,6 @@ import org.apache.fineract.portfolio.client.domain.Client;
 import org.apache.fineract.portfolio.client.domain.ClientRepositoryWrapper;
 import org.apache.fineract.spm.data.ScorecardData;
 import org.apache.fineract.spm.data.ScorecardValue;
-import org.apache.fineract.spm.domain.Response;
 import org.apache.fineract.spm.domain.Scorecard;
 import org.apache.fineract.spm.domain.Survey;
 import org.apache.fineract.spm.service.ScorecardReadPlatformService;
@@ -57,10 +42,17 @@ import org.apache.fineract.spm.service.ScorecardService;
 import org.apache.fineract.spm.service.SpmService;
 import org.apache.fineract.spm.util.ScorecardMapper;
 import org.apache.fineract.useradministration.domain.AppUser;
-import org.springframework.stereotype.Component;
-import org.springframework.transaction.annotation.Transactional;
+import jakarta.validation.constraints.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Path("/v1/surveys/scorecards")
 @Component
@@ -77,12 +69,12 @@ public class ScorecardApiResource {
 
     @GET
     @Path("{surveyId}")
-    @Consumes({ MediaType.APPLICATION_JSON })
-    @Produces({ MediaType.APPLICATION_JSON })
+    @Consumes({MediaType.APPLICATION_JSON})
+    @Produces({MediaType.APPLICATION_JSON})
     @Transactional
     @Operation(summary = "List all Scorecard entries", description = "List all Scorecard entries for a survey.")
     @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "OK", content = @Content(array = @ArraySchema(schema = @Schema(implementation = Scorecard.class)))) })
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(array = @ArraySchema(schema = @Schema(implementation = Scorecard.class))))})
     public List<ScorecardData> findBySurvey(@PathParam("surveyId") @Parameter(description = "Enter surveyId") final Long surveyId) {
         this.securityContext.authenticatedUser();
         this.spmService.findById(surveyId);
@@ -91,14 +83,14 @@ public class ScorecardApiResource {
 
     @POST
     @Path("{surveyId}")
-    @Consumes({ MediaType.APPLICATION_JSON })
-    @Produces({ MediaType.APPLICATION_JSON })
+    @Consumes({MediaType.APPLICATION_JSON})
+    @Produces({MediaType.APPLICATION_JSON})
     @Transactional
     @Operation(summary = "Create a Scorecard entry", description = "Add a new entry to a survey.\n" + "\n" + "Mandatory Fields\n"
             + "clientId, createdOn, questionId, responseId, staffId")
-    @ApiResponses({ @ApiResponse(responseCode = "200", description = "OK") })
+    @ApiResponses({@ApiResponse(responseCode = "200", description = "OK")})
     public void createScorecard(@PathParam("surveyId") @Parameter(description = "Enter surveyId") final Long surveyId,
-            @Parameter(description = "scorecardData") final ScorecardData scorecardData) {
+                                @Parameter(description = "scorecardData") final ScorecardData scorecardData) {
         final AppUser appUser = this.securityContext.authenticatedUser();
         final Survey survey = this.spmService.findById(surveyId);
         final Client client = this.clientRepositoryWrapper.findOneWithNotFoundDetection(scorecardData.getClientId());
@@ -113,11 +105,11 @@ public class ScorecardApiResource {
 
     @GET
     @Path("{surveyId}/clients/{clientId}")
-    @Consumes({ MediaType.APPLICATION_JSON })
-    @Produces({ MediaType.APPLICATION_JSON })
+    @Consumes({MediaType.APPLICATION_JSON})
+    @Produces({MediaType.APPLICATION_JSON})
     @Transactional
     public List<ScorecardData> findBySurveyAndClient(@PathParam("surveyId") @Parameter(description = "Enter surveyId") final Long surveyId,
-            @PathParam("clientId") @Parameter(description = "Enter clientId") final Long clientId) {
+                                                     @PathParam("clientId") @Parameter(description = "Enter clientId") final Long clientId) {
         this.securityContext.authenticatedUser();
         this.spmService.findById(surveyId);
         this.clientRepositoryWrapper.findOneWithNotFoundDetection(clientId);
@@ -127,8 +119,8 @@ public class ScorecardApiResource {
 
     @GET
     @Path("clients/{clientId}")
-    @Consumes({ MediaType.APPLICATION_JSON })
-    @Produces({ MediaType.APPLICATION_JSON })
+    @Consumes({MediaType.APPLICATION_JSON})
+    @Produces({MediaType.APPLICATION_JSON})
     @Transactional
     public List<ScorecardData> findByClient(@PathParam("clientId") final Long clientId) {
         this.securityContext.authenticatedUser();
@@ -139,12 +131,12 @@ public class ScorecardApiResource {
 
     @GET
     @Path("clients/{clientId}/surveys")
-    @Consumes({ MediaType.APPLICATION_JSON })
-    @Produces({ MediaType.APPLICATION_JSON })
+    @Consumes({MediaType.APPLICATION_JSON})
+    @Produces({MediaType.APPLICATION_JSON})
     @Transactional
     @Operation(summary = "View client survey responses", description = "Retrieves the latest survey submissions for a client")
     @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "OK", content = @Content(array = @ArraySchema(schema = @Schema(implementation = ScorecardData.class)))) })
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(array = @ArraySchema(schema = @Schema(implementation = ScorecardData.class))))})
     public List<ScorecardData> viewClientResponses(@PathParam("clientId") @Parameter(description = "Client ID") final Long clientId) {
         this.clientRepositoryWrapper.findOneWithNotFoundDetection(clientId);
 
@@ -161,79 +153,61 @@ public class ScorecardApiResource {
             // Flatten all scorecard values from all submissions
             List<ScorecardValue> allValues = surveySubmissions.stream()
                     .flatMap(submission -> submission.getScorecardValues().stream())
-                    .collect(Collectors.toList());
+                    .toList();
 
             // Group values by questionId and get the latest value for each question
             Map<Long, ScorecardValue> latestValuesByQuestion = allValues.stream()
                     .collect(Collectors.toMap(
-                        ScorecardValue::getQuestionId,
-                        value -> value,
-                        (v1, v2) -> v1.getCreatedOn().isAfter(v2.getCreatedOn()) ? v1 : v2
+                            ScorecardValue::getQuestionId,
+                            value -> value,
+                            (v1, v2) -> v1.getCreatedOn().isAfter(v2.getCreatedOn()) ? v1 : v2
                     ));
 
             // Create a new ScorecardData with the latest values for each question
             if (!latestValuesByQuestion.isEmpty()) {
-                ScorecardData completeSubmission = new ScorecardData();
-                completeSubmission.setId(surveySubmissions.get(0).getId());
-                completeSubmission.setUserId(surveySubmissions.get(0).getUserId());
-                completeSubmission.setUsername(surveySubmissions.get(0).getUsername());
-                completeSubmission.setClientId(surveySubmissions.get(0).getClientId());
-                completeSubmission.setSurveyId(surveySubmissions.get(0).getSurveyId());
-                completeSubmission.setSurveyName(surveySubmissions.get(0).getSurveyName());
-                completeSubmission.setScorecardValues(new ArrayList<>(latestValuesByQuestion.values()));
-                
+                ScorecardData completeSubmission = getScorecardData(surveySubmissions, latestValuesByQuestion);
+
                 result.add(completeSubmission);
             }
         }
 
         return result;
     }
-    
-    @GET
-    @Path("clients/{clientId}/surveys/debug")
-    @Consumes({ MediaType.APPLICATION_JSON })
-    @Produces({ MediaType.APPLICATION_JSON })
-    @Transactional
-    @Operation(summary = "Debug endpoint for client survey responses", description = "Returns all survey submissions for a client without filtering")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "OK", content = @Content(array = @ArraySchema(schema = @Schema(implementation = ScorecardData.class)))) })
-    public List<ScorecardData> debugClientResponses(@PathParam("clientId") @Parameter(description = "Client ID") final Long clientId) {
-        this.clientRepositoryWrapper.findOneWithNotFoundDetection(clientId);
 
-        // Get all submissions without any filtering using the debug method
-        Collection<ScorecardData> allSubmissions = this.scorecardReadPlatformService.retrieveScorecardByClientDebug(clientId);
-        
-        // Log the raw data for debugging
-        log.error("Raw submissions for client {}: {}", clientId, allSubmissions);
-        
-        // Return all submissions as is
-        return new ArrayList<>(allSubmissions);
+    @NotNull
+    private static ScorecardData getScorecardData(List<ScorecardData> surveySubmissions, Map<Long, ScorecardValue> latestValuesByQuestion) {
+        ScorecardData completeSubmission = new ScorecardData();
+        completeSubmission.setId(surveySubmissions.get(0).getId());
+        completeSubmission.setUserId(surveySubmissions.get(0).getUserId());
+        completeSubmission.setUsername(surveySubmissions.get(0).getUsername());
+        completeSubmission.setClientId(surveySubmissions.get(0).getClientId());
+        completeSubmission.setSurveyId(surveySubmissions.get(0).getSurveyId());
+        completeSubmission.setSurveyName(surveySubmissions.get(0).getSurveyName());
+        completeSubmission.setScorecardValues(new ArrayList<>(latestValuesByQuestion.values()));
+        return completeSubmission;
     }
+
 
     @PUT
     @Path("{surveyId}/clients/{clientId}")
-    @Consumes({ MediaType.APPLICATION_JSON })
-    @Produces({ MediaType.APPLICATION_JSON })
+    @Consumes({MediaType.APPLICATION_JSON})
+    @Produces({MediaType.APPLICATION_JSON})
     @Transactional
     @Operation(summary = "Update survey responses", description = "Update one or more responses for a client's survey submission")
     @ApiResponses({
-        @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = ScorecardData.class)))
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = ScorecardData.class)))
     })
     public ScorecardData updateSurveyResponses(
-        @PathParam("surveyId") @Parameter(description = "Survey ID") final Long surveyId,
-        @PathParam("clientId") @Parameter(description = "Client ID") final Long clientId,
-        @Parameter(description = "Updated responses") final ScorecardData scorecardData) {
-        
-        // Authenticate user
+            @PathParam("surveyId") @Parameter(description = "Survey ID") final Long surveyId,
+            @PathParam("clientId") @Parameter(description = "Client ID") final Long clientId,
+            @Parameter(description = "Updated responses") final ScorecardData scorecardData) {
+
         final AppUser appUser = this.securityContext.authenticatedUser();
-        
-        // Validate survey exists
+
         final Survey survey = this.spmService.findById(surveyId);
-        
-        // Validate client exists
+
         final Client client = this.clientRepositoryWrapper.findOneWithNotFoundDetection(clientId);
-        
-        // Update the responses
+
         return this.scorecardService.updateScorecardResponses(survey, client, appUser, scorecardData);
     }
 }
